[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "reforge"
version = "1.0.0"
description = "A single-file LoRA fine-tuning pipeline for Hugging Face models"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.37.0",
    "peft>=0.7.0",
    "datasets>=2.16.0",
    "pyarrow>=14.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "accelerate>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/R0U5/Reforge"

[project.scripts]
reforge = "reforge.__main__:main"
reforge-dashboard = "reforge.dashboard:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["reforge*"]
